--- a/forex predict(LSTM binary classification).ipynb
+++ b/forex predict(LSTM binary classification).ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled0.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM6a6hbWQmSClEfbpyx4Swb",
+      "authorship_tag": "ABX9TyPOy9R73bIKuD8jgWfTl9kC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,8 +78,8 @@
         "\n",
         "    for i in df.values:  # iterate over the values\n",
         "        prev_days.append([n for n in i[:-1]])  # store all but the target\n",
-        "        if len(prev_days) == SEQ_LEN:  # make sure we have 60 sequences!\n",
-        "            sequential_data.append([np.array(prev_days), i[-1]])  # append those bad boys!\n",
+        "        if len(prev_days) == SEQ_LEN:  # make sure we have seq-length sequences!\n",
+        "            sequential_data.append([np.array(prev_days), i[-1]])  #append sequence\n",
         "\n",
         "    \n",
         "    random.shuffle(sequential_data)  # shuffle for good measure.\n",
@@ -167,10 +167,10 @@
         "main_df['target'] = list(map(classify, main_df['close'], main_df['future']))\n",
         "#test and train seprate\n",
         "dates = sorted(main_df.index.values)  # get the dates\n",
-        "last_5pct = sorted(main_df.index.values)[-int(0.2*len(dates))]  # get the last 5% of the times\n",
+        "last_5pct = sorted(main_df.index.values)[-int(0.2*len(dates))]  # get the last 20% of the times\n",
         "\n",
-        "validation_main_df = main_df[(main_df.index >= last_5pct)]  # make the validation data where the index is in the last 5%\n",
-        "main_df = main_df[(main_df.index < last_5pct)]  # now the main_df is all the data up to the last 5%\n",
+        "validation_main_df = main_df[(main_df.index >= last_5pct)]  # make the validation data where the index is in the last 20%\n",
+        "main_df = main_df[(main_df.index < last_5pct)]  # now the main_df is all the data up to the last 20%\n",
         "print(main_df.head())\n",
         "print(main_df.describe())"
       ],
